<resources>
    <string name="app_name">Quizes Apps</string>
    <string name="super_quiz">Super Quiz</string>
    <string name="play_super_quiz_earn_200_coins"><![CDATA[Play Super Quiz & earn 200 coins]]></string>
    <string name="study">STUDY</string>
    <string name="home">HOME</string>
    <string name="profile">PROFILE</string>
    <string name="camera">CAMERA</string>
    <string name="quiz">Quiz</string>
    <string name="hello_anshu_singh">Hello,Anshu Singh</string>
    <string name="my_home">My Home</string>
    <string name="quiz_solve">Quiz Solve</string>
    <string name="rule">Rule</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change Password</string>
    <string name="submit">Submit</string>
    <string name="_00_00">00:00</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_an_account">Don\'t an account?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="ques2">ques2</string>
    <string name="ques3">ques3</string>
    <string name="ques4">ques4</string>
    <string name="ques5">ques5</string>
    <string name="ques6">ques6</string>
    <string name="ques1">ques1</string>
    <string name="point">point</string>
    <string name="question">Question</string>
    <string name="_0">0</string>
    <string name="question_solve">Question Solve</string>
    <string name="submits">SUBMIT</string>
    <string name="linux_category">Linux Category</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="linux">Linux</string>
    <string name="devops">DevOps</string>
    <string name="networking">Networking</string>
    <string name="programming_language">Programming Language</string>
    <string name="and_lots_more">And lots more</string>
    <string name="cloud">Cloud</string>
    <string name="docker">Docker</string>
    <string name="quize_solve">QUIZE SOLVE</string>
    <string name="programming">Programming</string>
    <string name="kubernetes">Kubernetes</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="mail">Mail</string>
    <string name="femail">Femail</string>
    <string name="other">Other</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="registration">REGISTRATION</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered</string>
    <string name="signing">Signing</string>
</resources>