<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#92A1F6"
    android:orientation="vertical"
    tools:context=".Activity.DevOpsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_arrow_back_ios_new_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/_00_00"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/devpoint"
                android:layout_width="90dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/submit"
                android:gravity="center"
                android:text="@string/point"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:background="@drawable/carsd"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/question_solve"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                app:strokeColor="@color/blue"
                app:strokeWidth="3dp">

                <TextView
                    android:id="@+id/devquestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:text="@string/hello_anshu_singh"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </com.google.android.material.card.MaterialCardView>

            <RadioGroup
                android:id="@+id/devradiogroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/devques1"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radio"
                    android:text="@string/ques1"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/devques2"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radio"
                    android:text="@string/ques2"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/devques3"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radio"
                    android:text="@string/ques3"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/devques4"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radio"
                    android:text="@string/ques4"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/devques5"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radio"
                    android:text="@string/ques5"
                    android:textStyle="bold" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/devques6"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/radio"
                    android:text="@string/ques6"
                    android:textStyle="bold" />

            </RadioGroup>

            <TextView
                android:id="@+id/devnextQue"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>