<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.DashBoardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/designbottom">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/home"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hello_anshu_singh"
            android:id="@+id/txtName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@drawable/card_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="25dp"
                    android:text="@string/my_home"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:columnCount="2"
                    android:rowCount="3">


                    <androidx.cardview.widget.CardView
                        android:id="@+id/quiz"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/quizsfg" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quiz_solve"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowWeight="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/history" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Histry"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/compliant" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/rule"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_rowWeight="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/key" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/change_password"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/linux_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="0"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/quiz" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/linux_category"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_rowWeight="1"
                        android:layout_column="1"
                        android:layout_columnWeight="1"
                        android:layout_gravity="fill"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/checkout" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/logout"
                                android:textColor="@color/black"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>


                </GridLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/designbottom"
        app:menu="@menu/menu"
        app:itemIconTint="#7D57C1"
        app:itemTextColor="#000000"/>

</RelativeLayout>